refactor: 가독성 향상을 위한 코드 리팩토링 (#278)
- 클래스 end of line 추가
- 엔티티 Column 명시
- 어노테이션 순서 일관화
- 메서드 길이 조절
- 일부 코드에 TODO 작성
- 일부 줄바꿈 수정